project2_handle/test/test_11711707_04.out
Error type 7 at Line 10: unsupported type of operands for arithmatic operator
Error type 8 at Line 10: function return type is not matched
