project2_handle/test/test_11711707_04.spl
struct ST{
};

struct ST test(int n){
    struct ST s;
    struct ST s1;
    if(n < 0){
        return s;
    }else if ( n == 0){
        return s + s1;
    }else{
        return (s1);
    }
}